[gd_scene format=3 uid="uid://cm7notme5iil5"]

[ext_resource type="Texture2D" uid="uid://cu3cs5n2rj2vb" path="res://images/hud_heartFull.png" id="1_wrfcw"]
[ext_resource type="Script" uid="uid://tyxsgufre3ps" path="res://scripts/p_hud.gd" id="1_xo6hs"]
[ext_resource type="Texture2D" uid="uid://b1or708epd0gy" path="res://images/items/coinGold.png" id="3_uuel0"]

[sub_resource type="LabelSettings" id="LabelSettings_uuel0"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="P_HUD" type="CanvasLayer" unique_id=913987814]
script = ExtResource("1_xo6hs")

[node name="MainCanvas" type="Control" parent="." unique_id=1876467086]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Health" type="Control" parent="MainCanvas" unique_id=2089221501]
anchors_preset = 0
offset_left = 72.0
offset_top = 48.0
offset_right = 112.0
offset_bottom = 88.0

[node name="HealthText" type="Label" parent="MainCanvas/Health" unique_id=1933988687]
unique_name_in_owner = true
layout_mode = 1
offset_left = 64.0
offset_top = 8.0
offset_right = 170.0
offset_bottom = 31.0
text = "HEALTH_TEXT"

[node name="HealthIcon" type="TextureRect" parent="MainCanvas/Health" unique_id=1124524528]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_wrfcw")

[node name="Coins" type="Control" parent="MainCanvas" unique_id=637409293]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_top = 56.0
offset_right = -96.0
offset_bottom = 96.0
grow_horizontal = 0

[node name="CoinText" type="Label" parent="MainCanvas/Coins" unique_id=1937808315]
unique_name_in_owner = true
layout_mode = 0
offset_left = -8.0
offset_right = 76.0
offset_bottom = 23.0
text = "COIN_TEXT"

[node name="CoinIcon" type="TextureRect" parent="MainCanvas/Coins" unique_id=563597523]
layout_mode = 0
offset_left = -72.0
offset_top = -24.0
offset_right = -2.0
offset_bottom = 46.0
texture = ExtResource("3_uuel0")

[node name="YouWin" type="Control" parent="MainCanvas" unique_id=1628077016]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -20.0
offset_right = 24.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouWinText" type="Label" parent="MainCanvas/YouWin" unique_id=578162155]
unique_name_in_owner = true
layout_mode = 0
offset_left = -68.0
offset_top = -8.0
offset_right = 100.0
offset_bottom = 37.0
text = "YOU WIN!!!"
label_settings = SubResource("LabelSettings_uuel0")
horizontal_alignment = 1
vertical_alignment = 1
